objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Underwriter_Recomendations__c</fullName>
        <description>Used to give approvers the underwriter&apos;s opinion on the opportunity</description>
        <label>Underwriter Recommendations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VCI_Fee__c</fullName>
        <description>Part of a group of Fleet/Lease fields to calculate the Amount field on FL opps.
Base Seller Fee
VCI Fee
Pack Fee
Go Green Fee
Anticipated Yearly Volume</description>
        <label>VCI Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VIN_Last_Six__c</fullName>
        <formula>Right(VIN__c, 6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN Last Six</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <formula>Auction__r.VIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Eligibility_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by ACV Capital.  R&amp;I Ticket request by M Hucul on 6/22/21</description>
        <inlineHelpText>Indicates that the dealer should not have vehicle make restrictions enforced on their account</inlineHelpText>
        <label>Vehicle Eligibility Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Widget_Live_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Widget Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Winning_Bid__c</fullName>
        <label>Winning Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Inspection_Report__c</fullName>
        <description>Field for True360 Opportunity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>1st Inspection Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year_Incorporated__c</fullName>
        <description>What year did the business incorporate. Needs to be a 4 digit number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What year did the business incorporate. Needs to be a 4 digit number</inlineHelpText>
        <label>Year Incorporated</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>ACV_Capital_IST_Florida_Referrals</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CreatedDate__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.ACV_Capital_Referral</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/15/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>NDale,EWirt,JSask</value>
        </filters>
        <label>ACV Capital - IST Florida Referrals</label>
    </listViews>
    <listViews>
        <fullName>ACV_Capital_Referrals_Closed</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Credit_Limit__c</columns>
        <columns>Credit_Product__c</columns>
        <columns>Reason_Referred__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CreatedDate__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Capital_Account_Rep__c</field>
            <operation>contains</operation>
            <value>cohen</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </filters>
        <label>ACV Capital Referrals - Closed</label>
    </listViews>
    <listViews>
        <fullName>ACV_Capital_Referrals_Open1</fullName>
        <columns>Territory__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Credit_Limit__c</columns>
        <columns>Credit_Product__c</columns>
        <columns>Referral_Promotion__c</columns>
        <columns>Reason_Referred__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CreatedDate__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.ACV_Capital_Referral</value>
        </filters>
        <label>ACV Capital Referrals - Open</label>
    </listViews>
    <listViews>
        <fullName>ACV_Capital_Referred_Over_2_Weeks</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Referred_Date__c</columns>
        <columns>CreatedDate__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.ACV_Capital_Referral</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Referred</value>
        </filters>
        <label>ACV Capital Referred  - With Date</label>
    </listViews>
    <listViews>
        <fullName>Account_Manager_Dealmaker_Ops</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Auction__c</columns>
        <columns>Auction_End_Date_Time__c</columns>
        <columns>VIN_Last_Six__c</columns>
        <columns>High_Bid__c</columns>
        <columns>Floor_Price__c</columns>
        <columns>Price_Variance__c</columns>
        <columns>Price_Variance_Percentage__c</columns>
        <columns>Buyer_Primary_Contact__c</columns>
        <columns>Seller_Primary_Contact__c</columns>
        <columns>Opty_Auction_Status__c</columns>
        <columns>Auto_sell__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Link_to_Deal_Maker__c</columns>
        <columns>Auction_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Auction_End_Date_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Deal_Maker</value>
        </filters>
        <filters>
            <field>Auto_sell__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Opty_Auction_Status__c</field>
            <operation>equals</operation>
            <value>counter_sent</value>
        </filters>
        <filters>
            <field>Account_Manager__c</field>
            <operation>equals</operation>
            <value>Lee Lomenzo,Jake Bass,Christina Caito,Michael Eady,Jackson Risner,Joe Naylor,Kylie Eaton,Paul Incorvaia,Sierra Vielhauer</value>
        </filters>
        <label>Account Manager Dealmaker Ops</label>
    </listViews>
    <listViews>
        <fullName>Alex_Valvo_Dealmaker_Open_Ops</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Seller_IST__c</columns>
        <columns>Link_to_Auction_Manager__c</columns>
        <columns>Auction_End_Date_Time__c</columns>
        <columns>High_Bid__c</columns>
        <columns>Floor_Price__c</columns>
        <columns>Price_Variance__c</columns>
        <columns>Price_Variance_Percentage__c</columns>
        <columns>Buyer_Primary_Contact__c</columns>
        <columns>Seller_Primary_Contact__c</columns>
        <columns>Opty_Auction_Status__c</columns>
        <columns>Auto_sell__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Link_to_Deal_Maker__c</columns>
        <columns>Auction_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Auction_End_Date_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Opty_Auction_Status__c</field>
            <operation>equals</operation>
            <value>counter_sent</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Deal_Maker</value>
        </filters>
        <label>Alex Valvo Dealmaker - Open Ops</label>
    </listViews>
    <listViews>
        <fullName>Alisha_Deal_Maker_Opps</fullName>
        <columns>Seller_IST__c</columns>
        <columns>Link_to_Auction_Manager__c</columns>
        <columns>Seller_Primary_Contact__c</columns>
        <columns>Seller_Dealership__c</columns>
        <columns>High_Bid__c</columns>
        <columns>Floor_Price__c</columns>
        <columns>Price_Variance__c</columns>
        <columns>Price_Variance_Percentage__c</columns>
        <columns>Auto_sell__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Link_to_Deal_Maker__c</columns>
        <columns>Opty_Auction_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Auction_End_Date_Time__c</field>
            <operation>equals</operation>
            <value>11/19/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>Opty_Auction_Status__c</field>
            <operation>equals</operation>
            <value>counter_sent</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Deal_Maker</value>
        </filters>
        <label>Alisha Deal Maker Opps</label>
    </listViews>
    <listViews>
        <fullName>Alisha_s_Day_Before_Dealmaker_Open_Ops</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Seller_IST__c</columns>
        <columns>Link_to_Auction_Manager__c</columns>
        <columns>Auction_End_Date_Time__c</columns>
        <columns>High_Bid__c</columns>
        <columns>Floor_Price__c</columns>
        <columns>Price_Variance__c</columns>
        <columns>Price_Variance_Percentage__c</columns>
        <columns>Buyer_Primary_Contact__c</columns>
        <columns>Seller_Primary_Contact__c</columns>
        <columns>Opty_Auction_Status__c</columns>
        <columns>Auto_sell__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Link_to_Deal_Maker__c</columns>
        <columns>Auction_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Auction_End_Date_Time__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Opty_Auction_Status__c</field>
            <operation>equals</operation>
            <value>counter_original_declined</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Deal_Maker</value>
        </filters>
        <filters>
            <field>Seller_Region__c</field>
            <operation>equals</operation>
            <value>Florida North Region,Panhandle Region,Florida South Region</value>
        </filters>
        <label>Alisha&apos;s Day Before Dealmaker - Open Ops</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Sales</value>
        </filters>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>contains</operation>
            <value>cimato</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>BDR_and_OBS_Dealmaker_Open_Ops</fullName>
        <booleanFilter>(1 OR 2)and 3</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>High_Bid__c</columns>
        <columns>Floor_Price__c</columns>
        <columns>Price_Variance_Percentage__c</columns>
        <columns>Price_Variance__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Buyer_Primary_Contact__c</columns>
        <columns>Seller_IST__c</columns>
        <columns>Seller_Primary_Contact__c</columns>
        <columns>VIN_Last_Six__c</columns>
        <columns>Link_to_Auction_Manager__c</columns>
        <columns>Opty_Auction_Status__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Auto_sell__c</columns>
        <columns>Buyer_Transportation_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Seller_IST__c</field>
            <operation>equals</operation>
            <value>Tiffany Mundell</value>
        </filters>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>equals</operation>
            <value>Tiffany Mundell</value>
        </filters>
        <filters>
            <field>Auction_End_Date_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>BDR and OBS. Dealmaker - Open Ops</label>
    </listViews>
    <listViews>
        <fullName>Brandt_Beckstrand_Dealmaker_Open_Ops</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Seller_IST__c</columns>
        <columns>Link_to_Auction_Manager__c</columns>
        <columns>Auction_End_Date_Time__c</columns>
        <columns>High_Bid__c</columns>
        <columns>Floor_Price__c</columns>
        <columns>Price_Variance__c</columns>
        <columns>Price_Variance_Percentage__c</columns>
        <columns>Buyer_Primary_Contact__c</columns>
        <columns>Seller_Primary_Contact__c</columns>
        <columns>Opty_Auction_Status__c</columns>
        <columns>Auto_sell__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Link_to_Deal_Maker__c</columns>
        <columns>Auction_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Auction_End_Date_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Opty_Auction_Status__c</field>
            <operation>equals</operation>
            <value>counter_sent</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Deal_Maker</value>
        </filters>
        <label>Brandt Beckstrand Dealmaker - Open Ops</label>
    </listViews>
    <listViews>
        <fullName>Bridgett_Moffett_Dealmaker_Open_Ops</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Seller_IST__c</columns>
        <columns>Link_to_Auction_Manager__c</columns>
        <columns>Auction_End_Date_Time__c</columns>
        <columns>High_Bid__c</columns>
        <columns>Floor_Price__c</columns>
        <columns>Price_Variance__c</columns>
        <columns>Price_Variance_Percentage__c</columns>
        <columns>Buyer_Primary_Contact__c</columns>
        <columns>Seller_Primary_Contact__c</columns>
        <columns>Opty_Auction_Status__c</columns>
        <columns>Auto_sell__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Link_to_Deal_Maker__c</columns>
        <columns>Auction_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Auction_End_Date_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Opty_Auction_Status__c</field>
            <operation>equals</operation>
            <value>counter_sent</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Deal_Maker</value>
        </filters>
        <label>Bridgett Moffett Dealmaker - Open Ops</label>
    </listViews>
    <listViews>
        <fullName>CMK_copy_Dealmaker_Open_Ops</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5 OR 6 OR 7)</booleanFilter>
        <columns>Buyer_Dealership__c</columns>
        <columns>Buyer_Primary_Contact__c</columns>
        <columns>Seller_Dealership__c</columns>
        <columns>Link_to_Auction_Manager__c</columns>
        <columns>Price_Variance__c</columns>
        <columns>Price_Variance_Percentage__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Auction_End_Date_Time__c</columns>
        <columns>High_Bid__c</columns>
        <columns>Floor_Price__c</columns>
        <columns>Link_to_Deal_Maker__c</columns>
        <columns>Auction_Notes__c</columns>
        <columns>Seller_IST__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Auction_End_Date_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Opty_Auction_Status__c</field>
            <operation>contains</operation>
            <value>counter_sent</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Deal_Maker</value>
        </filters>
        <filters>
            <field>Seller_Dealership_ID__c</field>
            <operation>equals</operation>
            <value>191,5130,9251,4809,15157,15156,1189,9951,16793,9945,9936,9934,9946,9948,9950,9937,9949,2300,2291,252,3372,3360,10761,286,2299,19413,4955,17497,7242,2052,337,402,277,5920,26097,10013,5379,5479,5040,1939,6313,223,16332,23973,10365,16323</value>
        </filters>
        <filters>
            <field>Seller_Dealership_ID__c</field>
            <operation>equals</operation>
            <value>17415,10587,801,20309,4893,5700,6400,6399,8055,12709,1859,4459,5271,26084,807,4474,10391,3427,1766,27308,2843,14791,6398,909,4601,1869,10841,2297,4476,4477,715,6397,520,19646,1825,4475,6401,9689,4829,12664,13325,20269,1134,4519,12846,9587</value>
        </filters>
        <filters>
            <field>Seller_Dealership_ID__c</field>
            <operation>equals</operation>
            <value>24696,24638,2472,18081,18077,3334,1989,30959,30962,3168,1890,1889,1297,27697,28001,10595,2116,9567,799,9391,10501,6711,5765,6495,11563,16376,15262,16383,25112,16386,25113,5904,12484,20369,12326,12363,11883,157,12334,12481,12331,12366,3205</value>
        </filters>
        <filters>
            <field>Seller_Dealership_ID__c</field>
            <operation>equals</operation>
            <value>12752,12449,10828,12480,23667,11783,7074,153</value>
        </filters>
        <label>Dealmaker - Open Ops - Orig CAMs</label>
    </listViews>
    <listViews>
        <fullName>CSH_Opps_List_View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Credit_Product__c</columns>
        <columns>Capital_Account_Rep__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Referral_Promotion__c</columns>
        <columns>Credit_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.ACV_Capital_Referral</value>
        </filters>
        <label>CSH - Opps List View</label>
    </listViews>
    <listViews>
        <fullName>CSM_DealMaker_Open_Ops_Updated3</fullName>
        <columns>Auction_End_Date_Time__c</columns>
        <columns>Auction__c</columns>
        <columns>VIN__c</columns>
        <columns>Seller_Dealership__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Floor_Price__c</columns>
        <columns>High_Bid__c</columns>
        <columns>Price_Variance__c</columns>
        <columns>Price_Variance_Percentage__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Auction_Notes__c</columns>
        <columns>Link_to_Auction_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Deal_Maker</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Seller_Dealership__c</field>
            <operation>contains</operation>
            <value>cal-tenn,Fair san,enterprise,copart,fusion,central inc.,5 star rent,image motors,american leasing,ace - las,carbuyer,carlotz,northeast leasing,mobility,dax</value>
        </filters>
        <filters>
            <field>Auction_End_Date_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Opty_Auction_Status__c</field>
            <operation>equals</operation>
            <value>counter_sent</value>
        </filters>
        <label>CSM DealMaker - Open Ops (Updated)</label>
        <sharedTo>
            <roleAndSubordinates>Account_Managers_Ryan</roleAndSubordinates>
            <roleAndSubordinates>Inside_Sales_Manager_Ryan</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ACV_Capital_Referral</fullName>
        <active>true</active>
        <businessProcess>ACV Capital Referral</businessProcess>
        <description>Used for Referrals into the ACV Capital program</description>
        <label>ACV Capital Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACV_Sales_Opportunity</fullName>
        <active>true</active>
        <businessProcess>ACV Sales Process</businessProcess>
        <description>Used to track sales opportunities</description>
        <label>ACV Sales Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Managers</fullName>
        <active>true</active>
        <businessProcess>Account Manager</businessProcess>
        <label>Account Managers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Activation_team</fullName>
        <active>false</active>
        <businessProcess>Activation team</businessProcess>
        <label>Activation team</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deal_Maker</fullName>
        <active>true</active>
        <businessProcess>Deal Maker</businessProcess>
        <description>Created when an Auction has not met the floor</description>
        <label>Deal Maker</label>
    </recordTypes>
    <recordTypes>
        <fullName>FastPass</fullName>
        <active>true</active>
        <businessProcess>FastPass</businessProcess>
        <description>FastPass process</description>
        <label>FastPass</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <businessProcess>Territory Managers</businessProcess>
        <label>Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>True360Opportunity</fullName>
        <active>true</active>
        <businessProcess>True360</businessProcess>
        <label>True360</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ACV_Capital_ACV_Contact_IsNot_Blank</fullName>
        <active>true</active>
        <description>Record Type:  ACV Capital Referral
Stage: Legal Documentation
Condition:  &apos;Capital_Account_Rep__c&apos; cannot be blank, &apos;Credit_Product__c&apos; picklist field cannot be blank nor have a value of &apos;Unsure when trying to move the stage to &apos;Legal Documentation&apos;.</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;ACV Capital Referral&quot;,
ISPICKVAL(StageName, &quot;Legal Documentation&quot;),
OR(ISBLANK(Capital_Account_Rep__c),ISBLANK(TEXT(Credit_Product__c)),ISPICKVAL(Credit_Product__c, &quot;Unsure&quot;)))</errorConditionFormula>
        <errorMessage>Please ensure the following fields are populated:   

Capital Account Rep, Credit Product

Credit Product cannot be blank nor have a value of &apos;Unsure&apos;.  Both required for Email Alerts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACV_Capital_CapitalAccountRep_NotBlank</fullName>
        <active>false</active>
        <description>This validation rule is to ensure that the field &apos;Capital_Account_Rep__c&apos; is not blank when a capital referral opportunity record type is set to &apos;closed-won&apos;. CAP-672</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;ACV Capital Referral&quot;,
ISPICKVAL(StageName, &quot;Awaiting Documents&quot;),
ISBlANK( Capital_Account_Rep__c ))</errorConditionFormula>
        <errorDisplayField>Capital_Account_Rep__c</errorDisplayField>
        <errorMessage>Please populate &apos;Capital Account Rep&apos; field with a capital user</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACV_Capital_Closed_Lost_Reason_Required</fullName>
        <active>false</active>
        <description>Closed Lost Reason is Required when changing the stage to closed lost</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;ACV Capital Referral&quot;,
ISPICKVAL(StageName, &quot;Closed Lost&quot;),
ISBlANK(TEXT(Closed_Lost_Reason__c)))</errorConditionFormula>
        <errorMessage>A Reason is required when marking the stage &quot;Closed Lost&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACV_Capital_FastPass_Other_Required</fullName>
        <active>false</active>
        <description>Closed Lost other reason is required for ACV Capital Referral and FastPass Opportunity Record types</description>
        <errorConditionFormula>ISPICKVAL(StageName, &quot;Closed Lost&quot;)
&amp;&amp;
OR(RecordType.Name = &quot;ACV Capital Referral&quot;,
RecordType.Name = &quot;FastPass&quot;)
&amp;&amp;
ISPICKVAL(Closed_Lost_Reason__c,&quot;Other&quot;)
&amp;&amp;
ISBLANK(Other_Reason__c) = TRUE</errorConditionFormula>
        <errorMessage>Please add a the &quot;Other Reason&quot; why the opportunity was marked closed lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACV_Capital_Fastpass_Lost_Reason_Req</fullName>
        <active>false</active>
        <description>Closed Lost Reason is Required when changing the stage to closed lost</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;ACV Capital Referral&quot;||
RecordType.Name = &quot;FastPass&quot;,
ISPICKVAL(StageName, &quot;Closed Lost&quot;),
ISBlANK(TEXT(Closed_Lost_Reason__c)))</errorConditionFormula>
        <errorMessage>A Reason is required when marking the stage &quot;Closed Lost&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACV_Capital_Other_Reason_Required</fullName>
        <active>false</active>
        <description>Closed Lost other reason is required.</description>
        <errorConditionFormula>ISPICKVAL(StageName, &quot;Closed Lost&quot;)
&amp;&amp;
RecordType.Name = &quot;ACV Capital Referral&quot;
&amp;&amp;
ISPICKVAL(Closed_Lost_Reason__c,&quot;Other&quot;)
&amp;&amp;
ISBLANK(Other_Reason__c) = TRUE</errorConditionFormula>
        <errorMessage>Please add a the &quot;Other Reason&quot; why the opportunity was marked closed lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACV_Capital_Prevent_Stage_Change</fullName>
        <active>false</active>
        <description>Prevent editing of the ACV Capital referral record after the stage has been moved to under review.</description>
        <errorConditionFormula>AND(
$Profile.Name != &quot;System Administrator&quot; &amp;&amp; 
$Profile.Name != &quot;ACV Capital&quot; &amp;&amp;
$Profile.Name !=&quot;ACV Capital With Unwind&quot; &amp;&amp;
$Profile.Name !=&quot;ACV Capital Sales&quot; &amp;&amp;
RecordType.Name = &quot;ACV Capital Referral&quot;,
ISCHANGED(StageName),
TEXT(StageName) = &apos;Underwriting&apos;||
TEXT(StageName) = &apos;Legal Documentation&apos;||
TEXT(StageName) = &apos;Awaiting Documents&apos;
)</errorConditionFormula>
        <errorMessage>Only an ACV Capital user is allowed to move this opportunity beyond the &quot;Under Review&quot; stage or edit it once progressing beyond &quot;Application Sent&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACV_Capital_Prevent_Stage_Closed_Won</fullName>
        <active>false</active>
        <description>Only select users within ACV Capital and System Administrators may select Stage Name = Closed Won.</description>
        <errorConditionFormula>AND(
$Profile.Name !=&quot;System Administrator&quot; &amp;&amp;
$Profile.Name !=&quot;ACV Capital&quot; &amp;&amp;
$Profile.Name !=&quot;ACV Capital With Unwind&quot; &amp;&amp;
RecordType.Name = &quot;ACV Capital Referral&quot;,
ISCHANGED(StageName),
TEXT(StageName) = &apos;Closed Won&apos;
)</errorConditionFormula>
        <errorMessage>Only select users within ACV Capital and System Administrators may select Stage Name = Closed Won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACV_Capital_Year_Incorporated</fullName>
        <active>false</active>
        <description>CAP-635</description>
        <errorConditionFormula>AND (
NOT($Setup.Org_Exceptions__c.Bypass_Process_Builder_Jobs__c) ,
RecordType.Name=&apos;ACV Capital Referral&apos;,
Year_Incorporated__c =&apos;&apos;,
ISPICKVAL( StageName , &apos;Underwriting&apos;)
)</errorConditionFormula>
        <errorMessage>Please enter Year Incorporated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACV_Capital_field_Risk_Grade</fullName>
        <active>true</active>
        <description>CSO-579 prevents users except for 3 underwriters from changing value</description>
        <errorConditionFormula>AND(
				AND(RecordType.Name = &quot;ACV Capital Referral&quot;,
				ISCHANGED( Risk_Grade__c ),
				NOT( $User.Alias =&apos;DZdro&apos;),
				NOT( $User.Alias =&apos;scimato&apos;),
				NOT( $User.Alias =&apos;MSnyd&apos;),
                                NOT($User.Alias =&apos;oargu&apos;)))</errorConditionFormula>
        <errorDisplayField>Risk_Grade__c</errorDisplayField>
        <errorMessage>you don&apos;t have enough permissions to update this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AV_Capital_Max_Line_Limit_Eligible</fullName>
        <active>true</active>
        <description>Field that should only be updated by UnderWriters
US https://acvauctions.atlassian.net/browse/CSO-573</description>
        <errorConditionFormula>AND(
				AND(RecordType.Name = &quot;ACV Capital Referral&quot;,
				ISCHANGED(  Max_Line_Limit_Elegible__c  ),
				NOT( $User.Alias =&apos;DZdro&apos;),
				NOT( $User.Alias =&apos;scimato&apos;),
				NOT( $User.Alias =&apos;MSnyd&apos;),
                                NOT($User.Alias =&apos;oargu&apos;)))</errorConditionFormula>
        <errorDisplayField>Max_Line_Limit_Elegible__c</errorDisplayField>
        <errorMessage>you don&apos;t have enough permissions to update this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FastPass_Cant_move_Stage_Until_Compliant</fullName>
        <active>false</active>
        <description>Fastpass Opportunity can not move to Documents Received until dealer doc compliant field on account is compliant.</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;FastPass&quot;,
ISPICKVAL(Account.Dealer_Doc_Compliance__c, &quot;Out of Compliance&quot;), 
ISCHANGED(StageName),
TEXT(StageName) = &apos;Documents Received&apos;)</errorConditionFormula>
        <errorMessage>The Account associated with this opportunity is not compliant.  Once the account becomes compliant the opportunity stage can be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Good_Standing_Comments</fullName>
        <active>false</active>
        <description>When the Good Standing with State is NO, comments must be entered</description>
        <errorConditionFormula>AND(ISPICKVAL(Good_Standing_within_State__c,&apos;no&apos;), ISBLANK( Good_Standing_Comments__c ))</errorConditionFormula>
        <errorMessage>Good Standing within state has been selected as no, please explain why in the Good Standing Comments field to save record</errorMessage>
    </validationRules>
</CustomObject>